@@ -1,3 +1,7 @@
+2009-12-08  Charley Wang  <chwang@redhat.com>
+
+	* src/org/eclipse/linuxtools/profiling/launch/ProfileLaunchConfigurationDelegate.java: Change delegate to launch by creating a temporary shell script, rather than launch directly.
+
 2009-12-06  rgrunber  <rgrunber@redhat.com>
 
 	* src/org/eclipse/linuxtools/profiling/launch/ProfileLaunchConfigurationDelegate.java 
